feat : integrated api event crud api

--- a/backend/.env
+++ b/backend/.env
@@ -1,8 +1,9 @@
 PORT=5000
 NODE_ENV=development   # change to 'production' in production
 
-MONGO_URI=mongodb://127.0.0.1:27017/event-management
-
-CLOUDINARY_CLOUD_NAME=your_cloud_name
-CLOUDINARY_API_KEY=your_api_key
-CLOUDINARY_API_SECRET=your_api_secret
+# MONGO_URI=mongodb+srv://ritanshu:ritanshu11@event.dvdlgpm.mongodb.net/event-management?retryWrites=true&w=majority
+# MONGO_URI="mongodb+srv://ritanshu:ritanshu11@event.dvdlgpm.mongodb.net/"
+MONGO_URI=mongodb+srv://parthjadhao:xexpo@cluster0.9vqi0kw.mongodb.net/
+CLOUDINARY_CLOUD_NAME=Untitled
+CLOUDINARY_API_KEY=899295596381663
+CLOUDINARY_API_SECRET=FWjlu_sGjXNP8Vz3i2rGITZoKF4
